objects/DLCObj18__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>Field1</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>Field2</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field5__c</fullName>
        <label>Field5</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>DLCObj18</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Field1__c</columns>
        <columns>Field2__c</columns>
        <columns>Field5__c</columns>
        <columns>AutorabitExtId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DLCObj18 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DLCObj18s</pluralLabel>
    <recordTypes>
        <fullName>DLCObj18_RcType1</fullName>
        <active>true</active>
        <description>test</description>
        <label>DLCObj18 RcType1</label>
    </recordTypes>
    <recordTypes>
        <fullName>DLCObj18_RcType2</fullName>
        <active>false</active>
        <label>DLCObj18 RcType2</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>